--- a/admin/templates/default/style.css
+++ b/admin/templates/default/style.css
@@ -118,28 +118,25 @@ table {
 	-o-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-<<<<<<< HEAD
 }
 
 .backend-table tr:nth-child(odd) {
 	background-color: #f9f9f9;
 }
 
-=======
-}
-
 .backend-table tr:nth-child(odd) {
 	background-color: #f9f9f9;
 }
 
->>>>>>> remotes/origin/bootstrap
 .backend-table td, .backend-table th {
 	border-bottom: 2px solid #d2d2d2;
 	padding-left: 5px;
 }
+
 .backend-table p {
 	line-height: 41px;
 }
+
 .backend-table tr{
 	text-align:left;
 	padding-top: 0px;
@@ -158,7 +155,6 @@ table {
 .td-title, .td-author, .td-category, .td-date {
 	max-width: 200px;
 	overflow: hidden;
-<<<<<<< HEAD
 }
 
 @media (min-width: 768px) and (max-width : 993px) {
@@ -166,15 +162,13 @@ table {
 		display: none;
 	}
 }
-=======
-}
 
 @media (min-width: 768px) and (max-width : 993px) {
 	.td-author, .td-date {
 		display: none;
 	}
 }
->>>>>>> remotes/origin/bootstrap
+
 @media (max-width: 635px) {
 	.td-author, .td-date {
 		display: none;
@@ -254,7 +248,7 @@ form a {
 	color: #ea6a1b;
 }
 
-h1, h2, h3, h4, h5, h6, h7, h8 {
+h1, h2, h3, h4, h5, h6 {
 	color: #333333;
 }
 button {
@@ -272,12 +266,10 @@ button {
 	margin: auto;*/
 }
 
-<<<<<<< HEAD
-=======
 .center-block{
 	float:none;
 }
->>>>>>> remotes/origin/bootstrap
+
 /* centered columns styles */
 .row-centered {
 	text-align:center;
@@ -375,7 +367,7 @@ button {
 	margin-right: 5px;
 	position: relative;
 }
-.media checkbox {
+.media [checkbox] {
 	height:120px;
 	width: 5px;
 	float:left;
@@ -396,20 +388,11 @@ button {
 	clear: both;
 }
 
-/*.center {*/
-<<<<<<< HEAD
-	/*margin: 0 auto;*/
-	/*float: none;*/
-=======
-/*margin: 0 auto;*/
-/*float: none;*/
->>>>>>> remotes/origin/bootstrap
-/*}*/
 .center {
 	width: max-content;
 	height: auto;
 	padding: 5px;
-	margin: auto;
+	margin: 0 auto;
 }
 
 /* Button Styling */
@@ -703,8 +686,7 @@ article {
 .article-title {
 	width: 100%;
 	height: auto;
-	font-family: 'Raleway', Arial, Helvetica;
-	background-color:none;
+	font-family: Raleway, Arial, Helvetica, sans-serif;
 	color: #f85c37;
 	margin: 0px;
 	padding: 5px;
@@ -735,7 +717,6 @@ article {
 	list-style-type:none;
 	padding: 3px;
 	margin: 0px 0% 5px 0%;
-	background-color:none;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -765,7 +746,6 @@ article {
 	color: #2d2520;
 	width: 100%;
 	height: auto;
-	background-color: none;
 	margin: 0px;
 	padding: 11px 5px 11px 5px;
 	border-bottom: 1px dotted #d2d2d2;
@@ -774,7 +754,6 @@ article {
 .widget-content {
 	width: 100%;
 	height: auto;
-	background-color: none;
 	margin: 0px;
 	padding: 3px;
 	/* wordt in WP widget wrpper ul*/
