added meta tags function for frontend

--- a/admin/templates/default/style.css
+++ b/admin/templates/default/style.css
@@ -149,7 +149,7 @@ table {
 }
 
 .backend-table button {
-	background-color: none;
+	background-color: transparent;
 }
 
 .td-title, .td-author, .td-category, .td-date {
