added single actions to various models and updated the html

--- a/admin/templates/default/style.css
+++ b/admin/templates/default/style.css
@@ -437,6 +437,10 @@ button:hover  {
 	text-decoration: none;
 	background-color: black;
 }
+
+.edit-link {
+	background-color: #80B12C;
+}
 /* Wrapper */
 
 #wrapper {
